TEST_PROGRAMS/INVALID/04/81.go
package main

func main() {
    // Illegal number of operands
    x := 1, 2
}
